--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -21,11 +21,34 @@
    },
    "source": [
     "## Today's agenda\n",
+    "* Presenting the hand-in!\n",
     "* A solution to last week's homework\n",
     "* Tuples and optional input arguments for functions\n",
     "* Networking\n",
-    "* APIs\n",
-    "* JSON (JavaScript Object Notation)"
+    "* JSON (JavaScript Object Notation)\n",
+    "* APIs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Learning goals today"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Hand-in #1"
    ]
   },
   {
@@ -373,6 +396,208 @@
    },
    "source": [
     "This allows us to avoid writing many versions of the \"same\" function, but handle the logic internally within a function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Exercise!\n",
+    "* Write a function which returns a list of all numbers from 1 to 25. The function should have the optional input argument ```omit```, which is a tuple of numbers that should not appear in the returned list.\n",
+    "* Bonus: make sure the function does not crash if the ```omit```-parameter is not a tuple."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Networking\n",
+    "Last time we worked with sending messages over a local network. We showed this internally using [localhost](https://en.wikipedia.org/wiki/Localhost) ```127.0.0.1```, but this could also have been done to other devices visible on the network and using their IP address instead."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Show example of sending UDP message from TouchOSC on iOS to Python script."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Examples of UDP messaging in Interaction Design\n",
+    "![alt text](images/thewave.png \"The Wave - Light installation\")\n",
+    "_The Wave (Photo credit: Paul Grover for The Telegraph)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "MS Teams (aka this lecture) also uses UDP messaging! By using network programming we are able to have different interactive systems or programs communicate with one another."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### The Internet\n",
+    "![alt text](images/internet.png \"The Internet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### _Ping_ and _traceroute_\n",
+    "\n",
+    "> Ping is a computer network administration software utility used to test the reachability of a host on an Internet Protocol (IP) network.\n",
+    ">\n",
+    "> --Source: ping (networking utility) ([wikipedia](https://en.wikipedia.org/wiki/Ping_(networking_utility)\\)))\n",
+    "\n",
+    "> In computing, traceroute and tracert are computer network diagnostic commands for displaying possible routes (paths) and measuring transit delays of packets across an Internet Protocol (IP) network.\n",
+    "> \n",
+    "> -- Source: traceroute ([wikipedia](https://en.wikipedia.org/wiki/Traceroute))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'46742000'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res.encodingdoing = res.apparent_encoding\n",
+    "tel = res.text.find('tel:')\n",
+    "res.text[tel+9:tel+17]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Using ```requests```\n",
+    "Hypertext Transfer Protocol (HTTP) is a protocol for transmitting between clients and servers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "If we want to access information stored on the internet, the [Requests](https://requests.readthedocs.io/en/master/)-module allows us to do that easily."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "401"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## JSON\n",
+    "\n",
+    "https://raw.githubusercontent.com/lutangar/cities.json/master/cities.json\n",
+    "\n",
+    "Formatting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### JSON exercises\n",
+    "* Make a list of cities in Sweden (SE) and sort by name.\n",
+    "* Make a list of cities that end in \"ville\" and sort by country code.\n",
+    "* Make a list of all cities closer than 500 km from Paris.\n",
+    "* Find the city that's the furthest away from Banket (Zimbabwe)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## APIs"
    ]
   },
   {
