--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -546,24 +546,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "401"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -575,7 +557,110 @@
     "\n",
     "https://raw.githubusercontent.com/lutangar/cities.json/master/cities.json\n",
     "\n",
-    "Formatting"
+    "* JSON (\"Jay-Son\") is __J__ava__S__cript __O__bject __N__otation.\n",
+    "* Standard file format used to store and trasmit data.\n",
+    "* Human-readable\n",
+    "* Derived from JavaScript but now language independent.\n",
+    "* Encoded in [UTF-8](https://en.wikipedia.org/wiki/UTF-8#Examples)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "```javascript\n",
+    "{\n",
+    "  \"data\": [{\n",
+    "    \"type\": \"articles\",\n",
+    "    \"working\": false,\n",
+    "    \"attributes\": {\n",
+    "      \"title\": \"JSON:API paints my bikeshed!\",\n",
+    "      \"body\": \"The shortest article. Ever.\"\n",
+    "    }\n",
+    "  }],\n",
+    "  \"included\": [\n",
+    "    {\n",
+    "      \"type\": \"people\",\n",
+    "      \"id\": 42,\n",
+    "      \"attributes\": {\n",
+    "        \"name\": \"John\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### JSON datatypes\n",
+    "_Source: [wikipedia](https://en.wikipedia.org/wiki/JSON#Syntax)_\n",
+    "\n",
+    "* Number: a signed decimal number that may contain a fractional part and may use exponential E notation, but cannot include non-numbers such as NaN. The format makes no distinction between integer and floating-point.\n",
+    "* String: a sequence of zero or more Unicode characters. Strings are delimited with double-quotation marks and support a backslash escaping syntax.\n",
+    "* Boolean: either of the values ```true``` or ```false```\n",
+    "* Array: an ordered list of zero or more values, each of which may be of any type. Arrays use square bracket notation with comma-separated elements.\n",
+    "* Object: a collection of name–value pairs where the names (also called keys) are strings. Objects are intended to represent associative arrays,[2] where each key is unique within an object.\n",
+    "* ```null```: an empty value, using the word null"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Working with JSON in Python\n",
+    "JSON as inline String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copenhagen\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# some JSON:\n",
+    "x =  '{ \"name\":\"Frederik\", \"city\":\"Copenhagen\", \"Number of toes\": \"10\"}' # JSON as string\n",
+    "\n",
+    "# parse x:\n",
+    "y = json.loads(x)\n",
+    "\n",
+    "# the result is a Python dictionary:\n",
+    "print(y[\"city\"]) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Loading and saving from JSON from file"
    ]
   },
   {
@@ -597,7 +682,8 @@
     }
    },
    "source": [
-    "## APIs"
+    "## APIs\n",
+    "Loading JSON from HTTP end-point"
    ]
   },
   {
