added json data

--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -245,13 +245,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ruc_coordinates' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-55-7df068904bd6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m \u001b[0;31m# pip3 install geopy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruc_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorrebro_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Distance from RUC to Nørrebro is {dist:.1f} km'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ruc_coordinates' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import geopy.distance # pip3 install geopy\n",
     "dist = geopy.distance.distance(ruc_coordinates, norrebro_coordinates).km\n",
@@ -645,13 +657,46 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Demonstrate Jupyter in VSCODE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing the module \n",
+    "import json \n",
+    "import geopy.distance  \n",
+    "    \n",
+    "# Opening JSON file \n",
+    "with open('data/cities.json') as json_file: \n",
+    "    cities = json.load(json_file) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### JSON exercises\n",
-    "* Make a list of cities in Sweden (SE) and sort by name.\n",
+    "_Using [cities dataset](https://github.com/lutangar/cities.json)_\n",
+    "* Make a list of cities in Sweden (SE) and [sort by name](https://stackoverflow.com/a/73050).\n",
     "* Make a list of cities that end in \"ville\" and sort by country code.\n",
-    "* Make a list of all cities closer than 500 km from Paris.\n",
-    "* Find the city that's the furthest away from Banket (Zimbabwe)."
+    "* Make a list of all cities closer than 500 km to Paris (FR) and insert distance to Paris in each dict.\n",
+    "    * Tip 1: use the calculate distance method from earlier in the slides\n",
+    "    * Tip 2: experiment on sliced subset e.g. ```cities[:50]``` to save time\n",
+    "    * You should get 13580 cities including Paris it self\n",
+    "* Find the city that's the furthest away from Banket (Zimbabwe / ```ZW```).\n",
+    "    * Result should be \"Leilani Estates\"\n",
+    "    \n",
+    "__Remember to save your solutions!__"
    ]
   },
   {
