added json data

--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,6 +677,7 @@
     "import geopy.distance  \n",
     "    \n",
     "# Opening JSON file \n",
+    "# cities.json download from https://github.com/lutangar/cities.json/blob/master/cities.json or moodle\n",
     "with open('data/cities.json') as json_file: \n",
     "    cities = json.load(json_file) "
    ]
