json save file example

--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,11 @@
     "# Opening JSON file \n",
     "# cities.json download from https://github.com/lutangar/cities.json/blob/master/cities.json or moodle\n",
     "with open('data/cities.json') as json_file: \n",
-    "    cities = json.load(json_file) "
+    "    cities = json.load(json_file)\n",
+    "    \n",
+    "# saving to JSON\n",
+    "#with open('data/output.json', 'w') as file_out:\n",
+    "#    json.dump(cities , file_out)"
    ]
   },
   {
@@ -687,7 +691,7 @@
    "metadata": {},
    "source": [
     "### JSON exercises\n",
-    "_Using [cities dataset](https://github.com/lutangar/cities.json)_\n",
+    "_Using [cities dataset](https://github.com/lutangar/cities.json)_ (can also be found on moodle)\n",
     "* Make a list of cities in Sweden (SE) and [sort by name](https://stackoverflow.com/a/73050).\n",
     "* Make a list of cities that end in \"ville\" and sort by country code.\n",
     "* Make a list of all cities closer than 500 km to Paris (FR) and insert distance to Paris in each dict.\n",
@@ -711,6 +715,13 @@
     "## APIs\n",
     "Loading JSON from HTTP end-point"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
