--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -25,7 +25,7 @@
     "* Tuples and optional input arguments for functions\n",
     "* Networking\n",
     "* JSON (JavaScript Object Notation)\n",
-    "* APIs"
+    "* Web APIs (HTTP GET)"
    ]
   },
   {
@@ -36,18 +36,23 @@
     }
    },
    "source": [
-    "### Learning goals today"
+    "### Learning goals today\n",
+    "* Stronger Python skills\n",
+    "* Somewhat of an understanding of how to get data from HTTP connection.\n",
+    "* Storing and handling JSON in files!\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "notes"
     }
    },
    "source": [
-    "## Hand-in #1"
+    "* Dip your feet in HTTP get requests\n",
+    "* handling JSON files (local and through end-point)\n",
+    "* Plenty of exercises!"
    ]
   },
   {
@@ -194,7 +199,7 @@
    "outputs": [],
    "source": [
     "test = (5, 0, 2)\n",
-    "test[0] = 1 # will throw an error"
+    "test[0] = 1 # will throw a TypeError"
    ]
   },
   {
@@ -245,25 +250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ruc_coordinates' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-7df068904bd6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m \u001b[0;31m# pip3 install geopy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruc_coordinates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnorrebro_coordinates\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Distance from RUC to Nørrebro is {dist:.1f} km'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ruc_coordinates' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import geopy.distance # pip3 install geopy\n",
     "dist = geopy.distance.distance(ruc_coordinates, norrebro_coordinates).km\n",
@@ -274,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "notes"
     }
    },
    "source": [
@@ -504,51 +497,6 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "#### demo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res.encodingdoing = res.apparent_encoding\n",
-    "tel = res.text.find('tel:')\n",
-    "res.text[tel+9:tel+17]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### Using ```requests```\n",
-    "Hypertext Transfer Protocol (HTTP) is a protocol for transmitting between clients and servers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "If we want to access information stored on the internet, the [Requests](https://requests.readthedocs.io/en/master/)-module allows us to do that easily."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -668,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,16 +660,222 @@
     }
    },
    "source": [
-    "## APIs\n",
-    "Loading JSON from HTTP end-point"
+    "## Web APIs\n",
+    "* What is an API?\n",
+    "* What is a web API?\n",
+    "* HTTP request\n",
+    "* HTTP request in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "An application programming interface (API), is a computing interface that defines interactions between multiple software components.\n",
+    "\n",
+    "A web API is an interface which has one or more endpoints - usually accessed through HTTP."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### HTTP requests\n",
+    "> HTTP defines a set of request methods to indicate the desired action to be performed for a given resource. Although they can also be nouns, these request methods are sometimes referred to as HTTP verbs.\n",
+    "> \n",
+    "> -- <cite>[Mozilla](https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods)</cite>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Some common HTTP requests include:\n",
+    "###### GET\n",
+    "The GET method requests a representation of the specified resource. Requests using GET should only retrieve data.\n",
+    "######  POST\n",
+    "The POST method is used to submit an entity to the specified resource, often causing a change in state or side effects on the server.\n",
+    "###### PUT\n",
+    "The PUT method replaces all current representations of the target resource with the request payload.\n",
+    "###### DELETE\n",
+    "The DELETE method deletes the specified resource."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "If we want to access information stored on the internet, the [Requests](https://requests.readthedocs.io/en/master/)-module allows us to do that easily."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### HTTP request in python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# getting HTML\n",
+    "r = requests.get('https://ruc.dk/')\n",
+    "r.text; # HTML code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Reading image\n",
+    "from PIL import Image # pip3 install Pillow\n",
+    "\n",
+    "url = 'https://ruc.dk/sites/default/files/styles/footer_map_image/public/2020-12/campus_overview.jpg?itok=D26B1wen'\n",
+    "im = Image.open(requests.get(url, stream=True).raw)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### HTTP requests on API\n",
+    "1. Find API\n",
+    "2. Read documentation\n",
+    "3. Create user with authentication (a must in some cases)\n",
+    "4. HTTP requests using ```requests```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Example - Weather\n",
+    "https://www.metaweather.com/api/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "ruc_coordinates = (55.65315552816671, 12.14078009885621) # lat, lon\n",
+    "\n",
+    "# defining a params dict for the parameters to be sent to the API \n",
+    "ruc_coordinates = (55.65315552816671, 12.14078009885621) # lat, lon\n",
+    "\n",
+    "# format as comma separated lattitude and longitude\n",
+    "ruc_coordinates_formatted = str(ruc_coordinates).strip('(').strip(')')\n",
+    "payload = {'lattlong': ruc_coordinates_formatted}\n",
+    "  \n",
+    "# sending get request and saving the response as response object \n",
+    "r = requests.get(url = \"https://www.metaweather.com/api/location/search/\", params = payload) \n",
+    "  \n",
+    "# extracting data in json format \n",
+    "response = r.json() \n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# sending get request and saving the response as response object \n",
+    "params = {'query': 'copenhagen'}\n",
+    "r = requests.get(url = \"https://www.metaweather.com/api/location/search/\", params = params) \n",
+    "  \n",
+    "# extracting data in json format \n",
+    "response = r.json() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "r = requests.get(url = \"https://www.metaweather.com/api/location/\" + str(response[0]['woeid'])) \n",
+    "  \n",
+    "# extracting data in json format \n",
+    "response = r.json() \n",
+    "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Exercise\n",
+    "1. Find interesting API on https://mixedanalytics.com/blog/list-actually-free-open-no-auth-needed-apis/\n",
+    "2. Get and interpret data using ```requests```and the dictionary and string techniques we have learned\n",
+    "3. _Ideas and examples:_\n",
+    "    * E.g. can you create a dictionary with both coordinates and population size of Boston (US).\n",
+    "    * Find software developer Jobs in Berlin!\n",
+    "    * Make a chat bot that tells jokes\n",
+    "    * Find all countries where they speak Spanish\n",
+    "    * Get Public holidays of all countries ending in A where they speak French"
+   ]
   },
   {
    "cell_type": "code",
