--- a/lecture_3/IDS_slides_lecture_3.ipynb
+++ b/lecture_3/IDS_slides_lecture_3.ipynb
@@ -59,6 +59,23 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Hand in\n",
+    "* One full lab day\n",
+    "* Groups of 2-6\n",
+    "* Hand in on 16/3\n",
+    "* Combine techniques of UDP, HTTP and CLI (Next time)\n",
+    "* Max 4 pages of text describing your program and the elements you used.\n",
+    "* This hand-in is the first part of the final mini project needed for the IDS exam."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -876,13 +893,6 @@
     "    * Find all countries where they speak Spanish\n",
     "    * Get Public holidays of all countries ending in A where they speak French"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
