--- a/lecture_4/lecture_4.ipynb
+++ b/lecture_4/lecture_4.ipynb
@@ -19,7 +19,74 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharing-apartment",
+   "id": "embedded-survival",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Agenda\n",
+    "- Last weeks topics REST API's\n",
+    "    - How did it go?\n",
+    "    - JSON\n",
+    "- Terminal User Interface\n",
+    "    - What is it and how do we program it\n",
+    "    - use it to send udp commands\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "steady-opposition",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# JSON\n",
+    "```\n",
+    "{\"name\":\"John\", \"age\":31, \"city\":\"New York\"}\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "similar-python",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# JSON arrays\n",
+    "```\n",
+    "{\n",
+    "\"name\":\"John\",\n",
+    "\"age\":30,\n",
+    "\"cars\":[ \"Ford\", \"BMW\", \"Fiat\" ]\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "waiting-secretariat",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# slides available at [github](https://github.com/InteractiveDigitalSystems/F2021/blob/main/lecture_4/Untitled.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sorted-coffee",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -44,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-table",
+   "id": "informational-lightning",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -57,7 +124,6 @@
     "\n",
     "class App(npyscreen.NPSAppManaged):\n",
     "    def onStart(self):\n",
-    "        #add forms to the application\n",
     "        self.addForm('MAIN', FirstForm, name=\"main\")\n",
     "\n",
     "class FirstForm(npyscreen.ActionFormMinimal):\n",
@@ -75,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bronze-beast",
+   "id": "enclosed-supervisor",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -89,14 +155,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-anger",
+   "id": "medium-flashing",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "source": [
-    "# the little details and weird tricks\n",
+    "# The little details and weird tricks\n",
     "\n",
     "- An object oriented approach\n",
     "- Applications, Forms & Widgets\n",
@@ -108,12 +174,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "framed-singapore",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "id": "cognitive-harbor",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Coffee break and try my code\n",
+    "\n",
+    "* Run thethe example from this github repository: [https://github.com/InteractiveDigitalSystems/pyTui](https://github.com/InteractiveDigitalSystems/pyTui) and play around with it\n",
+    "\n",
+    "* [Read the docs :-)](https://npyscreen.readthedocs.io/)\n",
+    "\n",
+    "* when you get an overview try to combine the examples into somehting new\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "verbal-biotechnology",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Show Time\n",
+    "* Show the class your results!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "involved-causing",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Larger exercise in Break Out rooms\n",
+    "Create a TUI application that can send a json file to \n"
+   ]
   }
  ],
  "metadata": {
