--- a/lecture_4/lecture_4.ipynb
+++ b/lecture_4/lecture_4.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "embedded-survival",
+   "id": "lucky-exercise",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "steady-opposition",
+   "id": "dimensional-edward",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-python",
+   "id": "pending-resistance",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "waiting-secretariat",
+   "id": "loved-george",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sorted-coffee",
+   "id": "manual-cargo",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informational-lightning",
+   "id": "iraqi-consortium",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-supervisor",
+   "id": "august-demographic",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -150,12 +150,14 @@
    "source": [
     "# Make it work!\n",
     "Let's take 15 minutes and make the previous example work\n",
-    "this will make sure that your npyscreen packages works and your terminal supports npyscreen"
+    "this will make sure that your npyscreen packages works and your terminal supports npyscreen\n",
+    "\n",
+    "It will work "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "medium-flashing",
+   "id": "ordinary-lindsay",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cognitive-harbor",
+   "id": "piano-truck",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "verbal-biotechnology",
+   "id": "logical-karma",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "involved-causing",
+   "id": "authorized-letter",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -215,8 +217,26 @@
    },
    "source": [
     "# Larger exercise in Break Out rooms\n",
-    "Create a TUI application that can send a json file to \n"
+    "\n",
+    "* Create a TUI application that can send aJSON object to PacketSender\n",
+    "    * Application must have input fields for name, email and phonenumber and a button\n",
+    "    * When button is clicked the application send a json objects containing the information above to packetsender\n",
+    "    \n",
+    "* Create a TUI application that can receive a JSON object from a weather API\n",
+    "    * Find a Weather API and access the information\n",
+    "    * Present the weather in a npyscreen application.\n",
+    "    * add [ascii art](https://www.asciiart.eu/)?\n",
+    "    \n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "visible-sculpture",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
