decorators slides done

--- a/lecture_6/lecture_6.ipynb
+++ b/lecture_6/lecture_6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "twelve-arena",
+   "id": "signed-lesson",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confidential-visiting",
+   "id": "retired-valuation",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "positive-death",
+   "id": "accessible-baseball",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -42,12 +42,39 @@
     "## Learning goals for today\n",
     "* More familiarity with advanced Python concepts\n",
     "* Tricks and tools for writing better software in Python\n",
-    "* Allow yourself "
+    "* Allow yourself to understand existing Python code better"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "suitable-agriculture",
+   "id": "wicked-anatomy",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Python interpreters\n",
+    "* Virtual environments\n",
+    "* What's the deal with Python2 and Python3?\n",
+    "* Code blocks in VS Code and Jupyter notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dynamic-values",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Show [2to3](https://docs.python.org/3/library/2to3.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "worth-flood",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -62,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exempt-journalist",
+   "id": "hollow-headset",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -74,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fluid-albany",
+   "id": "premier-constant",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -89,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-fluid",
+   "id": "japanese-pakistan",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -102,14 +129,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "positive-plaintiff",
+   "execution_count": 45,
+   "id": "conceptual-alarm",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "def shout(word='yes'):\n",
     "    return word.capitalize() + '!'\n",
@@ -119,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blessed-table",
+   "id": "southwest-worthy",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -131,14 +166,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "capital-charleston",
+   "execution_count": 46,
+   "id": "existing-above",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello!\n"
+     ]
+    }
+   ],
    "source": [
     "scream = shout\n",
     "print(scream('hello'))"
@@ -146,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mental-palestinian",
+   "id": "organized-consent",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -158,10 +201,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "neither-diagram",
+   "execution_count": 48,
+   "id": "republican-drinking",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yes...\n"
+     ]
+    }
+   ],
    "source": [
     "def talk():\n",
     "    # You can define a function on the fly in `talk` ...\n",
@@ -176,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "endless-peoples",
+   "id": "unauthorized-mapping",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -188,21 +239,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dried-judgment",
+   "execution_count": 49,
+   "id": "careful-computer",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_whisper() missing 1 required positional argument: 'word'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-7f51518ef4f9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwhisper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# will throw an error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: get_whisper() missing 1 required positional argument: 'word'"
+     ]
+    }
+   ],
    "source": [
     "whisper() # will throw an error"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "accessible-certificate",
+   "id": "front-yield",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -213,8 +276,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "physical-acoustic",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function getTalk.<locals>.whisper at 0x1127303a0>\n",
+      "hello...\n"
+     ]
+    }
+   ],
+   "source": [
+    "def getTalk(kind='shout'):\n",
+    "    # We define functions on the fly\n",
+    "    def shout(word='yes'):\n",
+    "        return word.capitalize() + '!'\n",
+    "\n",
+    "    def whisper(word='yes'):\n",
+    "        return word.lower() + '...'\n",
+    "\n",
+    "    # Then we return one of them\n",
+    "    if kind == 'shout':\n",
+    "        # We don’t use '()'. We are not calling the function;\n",
+    "        # instead, we’re returning the function object\n",
+    "        return shout  \n",
+    "    else:\n",
+    "        return whisper\n",
+    "    \n",
+    "talk = getTalk('whisper')\n",
+    "print(talk)\n",
+    "print(talk('hello'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "revolutionary-stations",
+   "id": "romance-posting",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -225,8 +325,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "partial-shore",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a stand alone function, don’t you dare modify me\n",
+      "Before the function runs\n",
+      "I am a stand alone function, don’t you dare modify me\n",
+      "After the function runs\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A decorator is a function that expects ANOTHER function as parameter\n",
+    "def my_shiny_new_decorator(a_function_to_decorate):\n",
+    "    def the_wrapper_around_the_original_function():\n",
+    "        print ('Before the function runs')\n",
+    "\n",
+    "        a_function_to_decorate()\n",
+    "\n",
+    "        print ('After the function runs')\n",
+    "\n",
+    "    # Return function\n",
+    "    return the_wrapper_around_the_original_function\n",
+    "\n",
+    "def a_stand_alone_function():\n",
+    "    print ('I am a stand alone function, don’t you dare modify me')\n",
+    "\n",
+    "a_stand_alone_function() \n",
+    "\n",
+    "a_stand_alone_function_decorated = my_shiny_new_decorator(a_stand_alone_function)\n",
+    "a_stand_alone_function_decorated()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "interested-process",
+   "id": "polyphonic-mailman",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "* A decorator is a function that expects ANOTHER function as parameter\n",
+    "* Inside, the decorator defines a function on the fly: the wrapper. This function is going to be wrapped around the original function so it can execute code before and after it.\n",
+    "* The wrapper function is return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eight-youth",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -238,14 +391,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "involved-breakdown",
+   "execution_count": 42,
+   "id": "aware-confirmation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before the function runs\n",
+      " -  Decorated function! -\n",
+      "After the function runs\n"
+     ]
+    }
+   ],
+   "source": [
+    "@my_shiny_new_decorator\n",
+    "def another_stand_alone_function():\n",
+    "    print(' -  Decorated function! -')\n",
+    "\n",
+    "another_stand_alone_function()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "herbal-output",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "This is shortcut of:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "vietnamese-kernel",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before the function runs\n",
+      " -  Decorated function! -\n",
+      "After the function runs\n"
+     ]
+    }
+   ],
+   "source": [
+    "def another_stand_alone_function():\n",
+    "    print(' -  Decorated function! -')\n",
+    "another_stand_alone_function = my_shiny_new_decorator(another_stand_alone_function)\n",
+    "another_stand_alone_function()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "domestic-submission",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "source": [
+    "### Using multiple decorators\n",
+    "We can use multiple decorats after one another"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "adequate-homeless",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "</''''''\\>\n",
+      "#tomatoes#\n",
+      "--ham--\n",
+      "~salad~\n",
+      "<\\______/>\n"
+     ]
+    }
+   ],
    "source": [
     "def bread(func):\n",
     "    def wrapper():\n",
@@ -272,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immune-broadway",
+   "id": "encouraging-correction",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -290,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "manufactured-paste",
+   "id": "ethical-pharmacology",
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -302,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "skilled-pollution",
+   "id": "temporal-electron",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -316,12 +553,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "received-lindsay",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Exercise!\n",
+    "Write a decorator that times how long it takes to execute a function. Use the following code for time start and stop:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "certain-responsibility",
+   "execution_count": 11,
+   "id": "exotic-thunder",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time spent 2.193450927734375e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "time_start = time.time() # returns seconds since Jan 1. 1970\n",
+    "# input argument\n",
+    "time_end = time.time()\n",
+    "print(f'Time spent {time_end - time_start}')"
+   ]
   }
  ],
  "metadata": {
